[Fernando Araujo][10-24-2019] tasks

--- a/Frontend/src/app/Components/home/home.component.html
+++ b/Frontend/src/app/Components/home/home.component.html
@@ -18,7 +18,7 @@
             <button type="button" class="btn btn-link text-white" (click)="ChangeMain()">
                 <fa-icon [icon]="Icons[0]" size="lg"></fa-icon>
             </button>
-            <button type="button" class="btn btn-link text-white">
+            <button type="button" class="btn btn-link text-white" (click)="LogOut()">
                 <fa-icon [icon]="Icons[1]" size="lg"></fa-icon>
             </button>
         </div>
