--- a/Frontend/src/app/Components/project/project.component.sass
+++ b/Frontend/src/app/Components/project/project.component.sass
@@ -5,3 +5,16 @@
   border: 5px solid white
   height: 140px
   width: 140px
+
+@media (min-width: 536px) 
+  .card-columns
+    column-count: 2
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) 
+  .card-columns
+    column-count: 3
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) 
+  .card-columns
+    column-count: 4
