--- a/Frontend/src/app/Components/login/login.component.html
+++ b/Frontend/src/app/Components/login/login.component.html
@@ -36,13 +36,14 @@
                         <button type="button" class="btn btn-link">¿Has Perdido La Contraseña?</button>
                     </div>
                     <div class="form-group pt-3 mb-0">
-                        <button type="submit" class="btn btn-primary w-50 gradient" [disabled]="Loading">
-                            <div [hidden]="Loading">
-                                <fa-icon [icon]="Icons[2]"></fa-icon>
-                            </div>
-                            <div class="spinner-border text-light" role="status" [hidden]="!Loading">
+                        <button type="submit" class="btn btn-primary w-50 gradient" [disabled]="Loading | async">
+                            <div class="spinner-border text-light" role="status"
+                                *ngIf="Loading | async; else elseTemplate">
                                 <span class="sr-only">Loading...</span>
                             </div>
+                            <ng-template #elseTemplate>
+                                <fa-icon [icon]="Icons[2]"></fa-icon>
+                            </ng-template>
                         </button>
                     </div>
                     <div class="form-group pt-1 mb-0">
