--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
         <div class="col">
             <nav class="navbar navbar-toggleable-md sticky-top text-uppercase gradient">
                 <a class="navbar-brand text-white mr-0" [routerLink]="['/home']" routerLinkActive="active">
-                    <img src="https://image.flaticon.com/icons/svg/1832/1832056.svg" width="30" height="30"
+                    <img src="../assets/Images/Teslac.png" width="30" height="30"
                         class="d-inline-block align-top mr-1" alt="">
                     Teslac
                 </a>
