--- a/Frontend/src/app/Components/project/project.component.sass
+++ b/Frontend/src/app/Components/project/project.component.sass
@@ -18,3 +18,6 @@
 @media (min-width: 1200px) 
   .card-columns
     column-count: 4
+
+#btn:focus, #btn:active:focus, #btn.active:focus
+  box-shadow: none !important
