--- a/Frontend/src/app/Components/sign-up/sign-up.component.html
+++ b/Frontend/src/app/Components/sign-up/sign-up.component.html
@@ -2,7 +2,7 @@
     <div class="col col-sm-8 col-md-7 col-lg-4 px-5 align-self-center px-sm-0">
         <div class="card text-center shadow-lg">
             <div class="card-header gradient text-white">
-                <img src="https://image.flaticon.com/icons/svg/1832/1832056.svg" width="80" height="80"
+                <img src="../../../assets/Images/Teslac.png" width="80" height="80"
                     class="d-inline-block align-top" alt="">
             </div>
             <div class="card-body">
