--- a/Frontend/src/app/Components/chat/chat.component.html
+++ b/Frontend/src/app/Components/chat/chat.component.html
@@ -14,7 +14,8 @@
                 </div>
                 <div class="col-1 align-self-center">
                     <div class="row justify-content-center">
-                        <button class="btn text-dark" type="button" (click)="Change()" [hidden]="(LoadingMessage | async)">
+                        <button class="btn text-dark" type="button" (click)="Change()"
+                            [hidden]="(LoadingMessage | async)">
                             <fa-icon [icon]="Icons[1]"></fa-icon>
                         </button>
                     </div>
@@ -23,15 +24,24 @@
         </div>
         <div class="card-body border-shadow overflow-auto" id="scroll">
             <div class="row animated fadeIn delay-500ms pt-1 align-items-center mx-0"
-                *ngFor="let item of Messages | async">
+                *ngFor="let item of Messages | async" [ngClass]="{'justify-content-end': !FilterBool(item)}">
                 <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" height="40" width="40"
                     *ngIf="FilterBool(item)" />
-                <div class="col">
+                <div class="col border-shadow">
                     <div class="row" [ngClass]="{'justify-content-end': !FilterBool(item)}">
-                        <p class="px-1 font-weight-bold my-0">{{Filter(item)}}</p>
+                        <p class="px-1 text-secondary font-weight-bold my-0" style="font-size: 8px;">
+                            {{Filter(item)}}</p>
+                    </div>
+                    <div class="row text-white" [ngClass]="{'justify-content-end': !FilterBool(item)}">
+                        <div class="col-auto pr-2 pl-2"
+                            [ngClass]="{'bg-primary': !FilterBool(item), 'bg-secondary': FilterBool(item)}"
+                            style="border-radius: 8px; max-width: 50%;">
+                            <p class="my-0">{{item.Message}}</p>
+                        </div>
                     </div>
                     <div class="row" [ngClass]="{'justify-content-end': !FilterBool(item)}">
-                        <p class="px-1 my-0">{{item.Message}}</p>
+                        <p class="px-1 text-secondary font-weight-bold my-0" style="font-size: 8px;">
+                            {{item.CreateAt |  date:'h:mm a'}}</p>
                     </div>
                 </div>
                 <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" height="40" width="40"
