--- a/Frontend/src/app/Components/profile/profile.component.html
+++ b/Frontend/src/app/Components/profile/profile.component.html
@@ -37,10 +37,9 @@
                     <div class="spinner-border text-light" role="status" [hidden]="!Loading">
                         <span class="sr-only">Loading...</span>
                     </div>
-                    <div class="card-columns" [hidden]="Loading">
-                        <a class="card border-light shadow-sm animated zoomIn cardwidth"
-                            *ngFor="let project of Projects | async" [routerLink]="[ '/project', project._id ]"
-                            routerLinkActive="active">
+                    <div class="col-11 col-sm-9 col-md-3" *ngFor="let project of Projects | async">
+                        <a class="card border-light shadow-sm animated zoomIn"
+                            [routerLink]="[ '/project', project._id ]" routerLinkActive="active">
                             <div class="card-header gradient"></div>
                             <div class="card-body">
                                 <div class="row w-100 mx-0">
@@ -78,7 +77,7 @@
                         </div>
                         <input type="text" class="form-control" placeholder="Proyecto" aria-label="Title"
                             aria-describedby="addon-wrapping" formControlName="Title" required minlength="1"
-                            maxlength="20" >
+                            maxlength="20">
                         <div class="invalid-feedback">
                             Ingrese Titulo Válido
                         </div>
