--- a/Frontend/src/app/Components/project/project.component.html
+++ b/Frontend/src/app/Components/project/project.component.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="row pt-2 justify-content-center">
-            <div class="col-11 align-self-center">
+            <div class="col-12 col-md-11 align-self-center">
                 <div class="row w-100 pb-2 mx-0">
                     <ul class="nav nav-tabs justify-content-center w-100">
                         <li class="nav-item">
@@ -43,13 +43,17 @@
                         </li>
                     </ul>
                 </div>
-                <div class="row w-100 mx-0 justify-content-center">
-                    <div class="col-11 col-sm-9 col-md-3" *ngFor="let item of Tables | async; let index = index"
-                        mwlDroppable (drop)="DropEnd(item, index)">
+                <div class="row w-100 mx-0 justify-content-md-start justify-content-center">
+                    <div class="col-11 col-sm-9 col-md-4 col-xl-3"
+                        *ngFor="let item of Tables | async; let index = index" mwlDroppable
+                        (drop)="DropEnd(item, index)">
                         <div class="card border-light shadow-sm">
                             <div class="card-header font-weight-bold">
                                 <fa-icon [icon]="Icons[2]" class="pr-1"></fa-icon>
                                 {{item.Title}}
+                                <a class="text-danger float-right pl-3" style="cursor: pointer;">
+                                    <fa-icon [icon]="Icons[5]"></fa-icon>
+                                </a>
                                 <a (click)="this.TableSelect = item" data-toggle="modal" data-target="#task">
                                     <fa-icon [icon]="Icons[3]" class="float-right" style="cursor: pointer;"></fa-icon>
                                 </a>
@@ -60,8 +64,15 @@
                                     <a class="card border-light shadow-sm animated zoomIn cardwidth"
                                         style="cursor: pointer;">
                                         <div class="card-header gradient py-0">
-                                            <div class="row justify-content-end">
-                                                <button class="btn text-danger" id="btn"
+                                            <div class="row justify-content-between">
+                                                <div class="btn float-left text-white">
+                                                    <fa-icon [icon]="Icons[1]">
+                                                    </fa-icon>
+                                                </div>
+                                                <button class="btn text-white float-right" id="btn">
+                                                    <fa-icon [icon]="Icons[7]"></fa-icon>
+                                                </button>
+                                                <button class="btn text-danger float-right" id="btn"
                                                     (click)="deleteTask(task, item._id)">
                                                     <fa-icon [icon]="Icons[5]"></fa-icon>
                                                 </button>
@@ -69,17 +80,22 @@
                                         </div>
                                         <div class="card-body">
                                             <div class="row w-100 mx-0">
-                                                <div class="col-2 px-0 align-self-center">
-                                                    <fa-icon [icon]="Icons[1]" class="float-left"></fa-icon>
-                                                </div>
                                                 <div class="col px-0 align-self-center">
                                                     {{task.Task}}
                                                 </div>
-                                                <div class="col-2 px-0 align-self-center">
+                                                <div class="col-auto px-0 align-self-center">
                                                     <img class="rounded-circle float-right"
                                                         [src]="FilterAssigned(task.Assigned)" alt="card image"
                                                         width="25" height="25">
                                                 </div>
+                                            </div>
+                                        </div>
+                                        <div class="card-footer">
+                                            <div class="float-left">
+                                                {{task.CreateAt | date: 'MM/d/y'}}
+                                            </div>
+                                            <div class="float-right">
+                                                {{task.CreateAt | date: 'h:mm a'}}
                                             </div>
                                         </div>
                                     </a>
