--- a/Frontend/src/styles.sass
+++ b/Frontend/src/styles.sass
@@ -5,7 +5,7 @@ body, html
     overflow-x: hidden
 
 *
-    font-family: 'Roboto', sans-serif
+    font-family: 'Ubuntu', sans-serif
 
 .gradient
     color: #2b5876
