--- a/Frontend/src/app/Components/chat/chat.component.html
+++ b/Frontend/src/app/Components/chat/chat.component.html
@@ -5,7 +5,7 @@
                 <div class="col">
                     <div class="row align-items-center">
                         <img [src]="Chat.UrlImage" class="rounded-circle ml-2" alt="Profile" height="30" width="30"
-                            id="imageChat" />
+                            id="imageChat" onerror="this.src = '../../assets/Images/errorImage.svg'" />
                         <div class="col pl-1">
                             <p class="font-weight-bold mb-0 ml-1">{{Chat.DisplayName}}</p>
                             <div id="typing" class="text-info mb-0 ml-1"></div>
@@ -26,7 +26,7 @@
             <div class="row animated fadeIn delay-500ms pt-1 align-items-center mx-0"
                 *ngFor="let item of Messages | async" [ngClass]="{'justify-content-end': !FilterBool(item)}">
                 <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" height="40" width="40"
-                    *ngIf="FilterBool(item)" />
+                    *ngIf="FilterBool(item)" alt="Imagen" onerror="this.src = '../../assets/Images/errorImage.svg'" />
                 <div class="col border-shadow">
                     <div class="row" [ngClass]="{'justify-content-end': !FilterBool(item)}">
                         <p class="px-1 text-secondary font-weight-bold my-0" style="font-size: 8px;">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" height="40" width="40"
-                    *ngIf="!FilterBool(item)" />
+                    *ngIf="!FilterBool(item)" alt="Imagen" onerror="this.src = '../../assets/Images/errorImage.svg'" />
             </div>
         </div>
         <div class="card-footer">
