--- a/Frontend/src/app/Components/project/project.component.html
+++ b/Frontend/src/app/Components/project/project.component.html
@@ -16,8 +16,8 @@
                     <div class="card-body">
                         <div class="row w-100 justify-content-center mr-0 ml-0">
                             <div class="card-block card-img-profile">
-                                <img class="img-fluid" src="https://image.flaticon.com/icons/svg/1692/1692461.svg"
-                                    alt="card image" alt="Imagen proyecto">
+                                <img class="img-fluid" src="../../assets/Images/project.svg" alt="card image"
+                                    alt="Imagen proyecto">
                             </div>
                         </div>
                         <h4 class="card-title">{{Project.Title}}</h4>
@@ -51,7 +51,8 @@
                             <div class="card-header font-weight-bold">
                                 <fa-icon [icon]="Icons[2]" class="pr-1"></fa-icon>
                                 {{item.Title}}
-                                <a class="text-danger float-right pl-3" style="cursor: pointer;" (click)="deleteTable(item._id)">
+                                <a class="text-danger float-right pl-3" style="cursor: pointer;"
+                                    (click)="deleteTable(item._id)">
                                     <fa-icon [icon]="Icons[5]"></fa-icon>
                                 </a>
                                 <a (click)="this.TableSelect = item" data-toggle="modal" data-target="#task">
@@ -86,7 +87,8 @@
                                                 <div class="col-auto px-0 align-self-center">
                                                     <img class="rounded-circle float-right"
                                                         [src]="FilterAssigned(task.Assigned)" alt="card image"
-                                                        width="25" height="25">
+                                                        width="25" height="25"
+                                                        onerror="this.src = '../../assets/Images/errorImage.svg'">
                                                 </div>
                                             </div>
                                         </div>
