--- a/Frontend/src/app/Components/chat/chat.component.html
+++ b/Frontend/src/app/Components/chat/chat.component.html
@@ -25,7 +25,7 @@
         <div class="card-body border-shadow overflow-auto" id="scroll">
             <div class="row animated fadeIn delay-500ms pt-1 align-items-center mx-0"
                 *ngFor="let item of Messages | async" [ngClass]="{'justify-content-end': !FilterBool(item)}">
-                <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" height="40" width="40"
+                <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" style="height: 35px; width: 40px;"
                     *ngIf="FilterBool(item)" alt="Imagen" onerror="this.src = '../../assets/Images/errorImage.svg'" />
                 <div class="col border-shadow">
                     <div class="row" [ngClass]="{'justify-content-end': !FilterBool(item)}">
@@ -44,7 +44,7 @@
                             {{item.CreateAt |  date:'h:mm a'}}</p>
                     </div>
                 </div>
-                <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" height="40" width="40"
+                <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" style="height: 35px; width: 40px;"
                     *ngIf="!FilterBool(item)" alt="Imagen" onerror="this.src = '../../assets/Images/errorImage.svg'" />
             </div>
         </div>
