--- a/Frontend/src/app/Components/home/home.component.html
+++ b/Frontend/src/app/Components/home/home.component.html
@@ -2,7 +2,7 @@
     <nav class="col-md-3 col-xl-2 d-none d-md-block bg-transparent border-right">
         <div class="row pt-3 justify.content-center mx-0 text-dark border-bottom">
             <div class="col align-self-center">
-                <img [src]="this.User.User.UrlImage" class="rounded-circle img-fluid float-left pb-1"
+                <img [src]="this.User.User.UrlImage" class="rounded-circle float-left pb-1"
                     style="height: 60px; width: 60px;" onerror="this.src = '../../assets/Images/errorImage.svg'"
                     alt="Imagen">
             </div>
@@ -70,7 +70,9 @@
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="card-body px-0 pt-0 pb-0">
-                            Hola Mundo2
+                            <ListConversations [Conversations]="ConversationsGroup" [isGroup]="true"
+                                [Change]="ChangeMain">
+                            </ListConversations>
                         </div>
                     </div>
                 </div>
@@ -105,7 +107,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form action="javascript:;" [formGroup]="FormControl" (ngSubmit)="onSubmit()"
+            <form action="javascript:;" [formGroup]="FormControl" (ngSubmit)="CreateGroup()"
                 [ngClass]="{'was-validated': !FormControl.valid && Submited}">
                 <div class="modal-body">
                     <div class="form-group">
@@ -115,8 +117,8 @@
                                     <fa-icon [icon]="Icons[4]"></fa-icon>
                                 </span>
                             </div>
-                            <input type="text" class="form-control" id="Name" placeholder="Name" aria-describedby="name"
-                                required minLength="4" maxLength="30" formControlName="Name" />
+                            <input type="text" class="form-control" id="DisplayName" placeholder="Nombre" aria-describedby="DisplayName"
+                                required minLength="4" maxLength="30" formControlName="DisplayName" />
                             <div class="invalid-feedback">Nombre Invalido</div>
                         </div>
                     </div>
@@ -129,11 +131,14 @@
                             </div>
                             <select class="form-control" formControlName="Members" required multiple>
                                 <option *ngFor="let conversation of Conversations | async"
-                                    [ngValue]="conversation.Members[0]._id">
-                                    <img [src]="conversation.Members[0].UrlImage" class="rounded-circle float-left"
-                                        alt="Cinque Terre" width="25" height="25"
-                                        onerror="this.src = '../../assets/Images/errorImage.svg'" alt="Imagen" />
+                                    [ngValue]="conversation.Members[0]._id"
+                                    data-img-src="../../assets/Images/errorImage.svg">
                                     {{conversation.Members[0].DisplayName}}
+                                    <label [for]="conversation.Members[0]._id">
+                                        <img [src]="conversation.Members[0].UrlImage" class="rounded-circle float-left"
+                                            alt="Cinque Terre" width="25" height="25"
+                                            onerror="this.src = '../../assets/Images/errorImage.svg'" alt="Imagen" />
+                                    </label>
                                 </option>
                             </select>
                             <div class="invalid-feedback justify-content-start">
