[Fernando Araujo][11-17-2019] projectproject incomplete

--- a/Frontend/src/app/Components/home/home.component.html
+++ b/Frontend/src/app/Components/home/home.component.html
@@ -2,7 +2,7 @@
     <nav class="col-md-3 col-xl-2 d-none d-md-block bg-transparent border-right">
         <div class="row pt-3 justify.content-center mx-0 text-dark border-bottom">
             <div class="col align-self-center">
-                <img [src]="this.User.User.UrlImage" class="rounded-circle float-left pb-1"
+                <img [src]="this.User.UrlImage" class="rounded-circle float-left pb-1"
                     style="height: 60px; width: 60px;" onerror="this.src = '../../assets/Images/errorImage.svg'"
                     alt="Imagen">
             </div>
