--- a/Frontend/src/app/Components/profile/profile.component.html
+++ b/Frontend/src/app/Components/profile/profile.component.html
@@ -8,12 +8,12 @@
                         <div class="row w-100 justify-content-center mr-0 ml-0">
                             <div class="card-block card-img-profile">
                                 <div class="hovereffect rounded-circle">
-                                    <img class="img-fluid" [src]="(User | async).User.UrlImage" alt="card image" alt="Imagen"
+                                    <img class="img-fluid" [src]="(User | async).UrlImage" alt="card image" alt="Imagen"
                                         onerror="this.src = '../../assets/Images/errorImage.svg'">
                                     <div class="overlay rounded-circle text-white">
                                         <input type="file" name="imageUpload" id="imageUpload"
-                                            style="visibility: hidden;"
-                                            accept="image/x-png,image/gif,image/jpeg" (input)="UploadImage($event)"/>
+                                            style="visibility: hidden;" accept="image/x-png,image/gif,image/jpeg"
+                                            (input)="UploadImage($event)" />
                                         <label for="imageUpload" style="cursor: pointer;">
                                             <fa-icon [icon]="Icons[4]" size="lg"></fa-icon>
                                         </label>
@@ -21,8 +21,8 @@
                                 </div>
                             </div>
                         </div>
-                        <h4 class="card-title">{{(User | async).User.DisplayName}}</h4>
-                        <p class="card-text">{{(User | async).User.Description}}</p>
+                        <h4 class="card-title">{{(User | async).DisplayName}}</h4>
+                        <p class="card-text">{{(User | async).Description}}</p>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,14 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Crear</button>
+                    <button type="submit" class="btn btn-primary">
+                        <div class="spinner-border text-light" role="status" *ngIf="LoadingProject | async; else elseTemplate">
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                        <ng-template #elseTemplate>
+                            Crear
+                        </ng-template>
+                    </button>
                 </div>
             </form>
         </div>
